# ntropy-sdk-rs

./: Cargo.toml  README.md  generate-api-client.sh
.github/workflows/: ci.yml
ntropy-api-client/: Cargo.toml  README.md
ntropy-api-client/.openapi-generator/: FILES
ntropy-api-client/src/apis/: account_holder_api.rs  configuration.rs  enrichment_api.rs  misc_api.rs  mod.rs
ntropy-api-client/src/models/: account_holder.rs  account_holder_metric_name.rs  account_holder_metrics_query.rs  account_holder_metrics_query_result.rs  account_holder_metrics_query_result_stats_by_label_value.rs  account_holder_overall_stats_metric.rs  account_holder_transaction.rs  account_holder_transaction_result.rs  account_holder_type.rs  batch_result.rs  chart_of_accounts_value.rs  enriched_transaction.rs  enrichment_report.rs  income_group.rs  labelled_transaction.rs  labels_hierarchy_value.rs  metric_statistics_value.rs  missing_account_holders_error.rs  mod.rs  model.rs  model_create_request.rs  model_status.rs  ntropy_server_api_v2_2_enrich_transactions_sync_200_response_inner.rs  recurrence_group.rs  recurrence_group_one_of.rs  transaction.rs  transaction_error.rs  transaction_error_error_details.rs
ntropy-sdk/: Cargo.toml
ntropy-sdk/examples/: enrich_transactions.rs
ntropy-sdk/src/: client.rs  errors.rs  helpers.rs  lib.rs
